--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dwbe-sprint-01",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Sprint Project N° 1 en marco del Curso de Desarrollo Web Backend",
   "main": "app.js",
   "scripts": {
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/tdfn00b/dwbe-sprint-1#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   }
 }
